[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/door/flap.png" type="Texture" id=1]
[ext_resource path="res://app/door/Door.gd" type="Script" id=13]
[ext_resource path="res://assets/sounds/door/door.wav" type="AudioStream" id=15]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0.0176439, 0.066169 )
b = Vector2( 50, 0 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 0.0296898, -0.036724 )
b = Vector2( -50, 0 )

[sub_resource type="Animation" id=3]
resource_name = "FlapOpen"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RightFlapSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftFlapSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.2271, 49.9808 )

[node name="Door" type="Area2D"]
script = ExtResource( 13 )

[node name="RightFlapSprite" type="Sprite" parent="."]
position = Vector2( 50, 0 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -50, -5 )

[node name="RigidBody2D" type="StaticBody2D" parent="RightFlapSprite"]

[node name="LeftFlapCollider" type="CollisionShape2D" parent="RightFlapSprite/RigidBody2D"]
position = Vector2( -49.9, 0 )
scale = Vector2( 1, 3.4 )
shape = SubResource( 1 )

[node name="LeftFlapSprite" type="Sprite" parent="."]
position = Vector2( -50, 0 )
rotation = 3.14159
texture = ExtResource( 1 )
centered = false
offset = Vector2( -50, -5 )

[node name="RigidBody2D" type="StaticBody2D" parent="LeftFlapSprite"]

[node name="RightFlapCollider" type="CollisionShape2D" parent="LeftFlapSprite/RigidBody2D"]
position = Vector2( -49.9, 0 )
rotation = -3.14159
scale = Vector2( 1, 3.4 )
shape = SubResource( 2 )

[node name="DoorAnimation" type="AnimationPlayer" parent="."]
anims/FlapOpen = SubResource( 3 )

[node name="ProximityDetector" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0596008, 0.127693 )
shape = SubResource( 4 )

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
